clusters/beryjuio-home/paperless/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: paperless
  labels:
    istio-injection: enabled
