clusters/beryjuio-home/paperless/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: paperless
        app.kubernetes.io/name: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          resources:
            limits:
              memory: 6Gi
            requests:
              cpu: 25m
              memory: 2Gi
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data/local
              name: data
            - mountPath: /data/nas/incoming
              name: nas-incoming
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: nas-incoming
          nfs:
            path: /volume1/print/scanner
            server: nas1.prod.beryju.io
