clusters/beryjuio-home/paperless/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: paperless
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/name: paperless
