clusters/beryjuio-home/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
spec:
  ingressClassName: istio
  rules:
    - host: paperless.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: paperless
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - paperless.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-paperless
